[package]
name = "bevy_egui_web_showcase"
version = "0.4.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.14"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.80"

[patch.crates-io]
#bevy_egui = { path = "../bevy_egui" }
