[package]
name = "bevy_egui_web_showcase"
version = "0.4.0"
authors = ["mvlabat <mvlabat@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_egui = "0.22"
rand = { version = "0.8.5" }
wasm-bindgen = "0.2.87"

[patch.crates-io]
#bevy_egui = { path = "../bevy_egui" }
